--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Configurações do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/myspringnews
+spring.datasource.username=root
+spring.datasource.password=lukita10
 
+# Configurações do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuração de localização do dialeto do MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
