--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-# Configurações do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/myspringnews
+# Configurações do DataSource para o MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/my_spring_news
 spring.datasource.username=root
 spring.datasource.password=lukita10
 
 # Configurações do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Configuração de localização do dialeto do MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
